--- a/main.html
+++ b/main.html
@@ -11,6 +11,20 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<ol>
+		
+		<li data-ns-test="shoppingList">Dress</li>
+		<li data-ns-test="shoppingList">Phone</li>
+		<li data-ns-test="shoppingList">Laptop</li>
+	</ol>
+
+	<ul>
+		<li data-ns-test="holidayList">Kadernath</li>
+		<li data-ns-test="holidayList">Simla</li>
+		<li data-ns-test="holidayList">Himachal</li>
+		
+	</ul>
+
 </body>
 
 </html>
